<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/et_server_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:text="@string/default_url"
        android:hint="@string/server_url"/>

    <TextView
        android:id="@+id/tv_connecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connecting"
        app:layout_constraintTop_toTopOf="@id/progress_connecting"
        app:layout_constraintBottom_toBottomOf="@id/progress_connecting"
        app:layout_constraintStart_toStartOf="@id/et_server_url"
        app:layout_constraintEnd_toStartOf="@id/progress_connecting"/>

    <ProgressBar
        android:id="@+id/progress_connecting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_connecting"
        app:layout_constraintEnd_toEndOf="@id/et_server_url"
        app:layout_constraintTop_toBottomOf="@id/et_server_url"
        android:indeterminate="true"/>

    <android.support.design.button.MaterialButton
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

</android.support.constraint.ConstraintLayout>